CREATE TABLE CLIENTE (
     ID UUID NOT NULL,
     DOCUMENTO VARCHAR(50),
     NOME VARCHAR(255),
     EMAIL VARCHAR(255),
     TELEFONE VARCHAR(50),

     CONSTRAINT PK_CLIENTE PRIMARY KEY (ID)
);

CREATE TABLE VEICULO (
     ID UUID NOT NULL,
     PLACA VARCHAR(20),
     MARCA VARCHAR(100),
     MODELO VARCHAR(100),
     ANO VARCHAR(10),
     ClIENTE_DOCUMENTO VARCHAR(50),

     CONSTRAINT PK_VEICULO PRIMARY KEY (ID)
);


CREATE TABLE SERVICO (
     ID UUID NOT NULL,
     CODIGO VARCHAR(100) NOT NULL,
     DESCRICAO VARCHAR(500) NOT NULL,
     VALOR DECIMAL(10, 2) NOT NULL,
     TEMPO_MEDIO_EXECUCAO_MINUTOS INTEGER,

     CONSTRAINT PK_SERVICO PRIMARY KEY (ID),
     CONSTRAINT UK_SERVICO_CODIGO UNIQUE (CODIGO)
);



CREATE TABLE ESTOQUE (
     ID UUID NOT NULL,
     CODIGO VARCHAR(100) NOT NULL,
     NOME VARCHAR(255) NOT NULL,
     VALOR DECIMAL(10, 2) NOT NULL,
     QUANTIDADE INTEGER NOT NULL DEFAULT 0,
     RESERVADOS INTEGER NOT NULL DEFAULT 0,

     CONSTRAINT PK_ESTOQUE PRIMARY KEY (ID),
     CONSTRAINT UK_ESTOQUE_CODIGO UNIQUE (CODIGO)
);


CREATE TABLE USUARIO (
     ID UUID NOT NULL,
     EMAIL VARCHAR(255) NOT NULL,
     SENHA VARCHAR(255) NOT NULL,
     ROLE VARCHAR(50) NOT NULL,
     DOCUMENTO VARCHAR(14),

     CONSTRAINT PK_USUARIO PRIMARY KEY (ID),
     CONSTRAINT UK_USUARIO_EMAIL UNIQUE (EMAIL)
);


CREATE TABLE ORDEM_SERVICO (
   ID UUID NOT NULL,
   DOCUMENTO_CLIENTE VARCHAR(50) NOT NULL,
   PLACA_VEICULO VARCHAR(20) NOT NULL,
   DT_HORA_ABERTURA TIMESTAMP NOT NULL,
   DT_HORA_FECHAMENTO TIMESTAMP,
   DT_HORA_INICIO_EXECUCAO TIMESTAMP,
   DT_HORA_FIM_EXECUCAO TIMESTAMP,
   DESCRICAO_PROBLEMA VARCHAR(2000),
   ORDEM_DE_SERVICO_STATUS VARCHAR(50) NOT NULL,
   VALOR_SERVICOS DECIMAL(10, 2) NOT NULL DEFAULT 0,
   VALOR_PECAS_INSUMOS DECIMAL(10, 2) NOT NULL DEFAULT 0,
   VALOR_OS DECIMAL(10, 2) NOT NULL DEFAULT 0,
   OBSERVACAO_CLIENTE VARCHAR(200),

   CONSTRAINT PK_ORDEM_SERVICO PRIMARY KEY (ID)
);


CREATE TABLE ORDEM_SERVICO_SERVICO (
   ID UUID NOT NULL,
   ORDEM_SERVICO_ID UUID NOT NULL,
   SERVICO_ID UUID NOT NULL,
   DESCRICAO VARCHAR(500) NOT NULL,
   VALOR DECIMAL(10, 2) NOT NULL,

   CONSTRAINT PK_ORDEM_SERVICO_SERVICO PRIMARY KEY (ID),
   CONSTRAINT FK_ORDEM_SERVICO_SERVICO_ORDEM_SERVICO
       FOREIGN KEY (ORDEM_SERVICO_ID)
           REFERENCES ORDEM_SERVICO(ID)
           ON DELETE CASCADE
);


CREATE TABLE ORDEM_SERVICO_ITEM_ESTOQUE (
    ID UUID NOT NULL,
    ORDEM_SERVICO_ID UUID NOT NULL,
    ESTOQUE_ID UUID NOT NULL,
    NOME VARCHAR(255) NOT NULL,
    VALOR_UNITARIO DECIMAL(10, 2) NOT NULL,
    QUANTIDADE INTEGER NOT NULL,
    VALOR_TOTAL DECIMAL(10, 2) NOT NULL,

    CONSTRAINT PK_ORDEM_SERVICO_ITEM_ESTOQUE PRIMARY KEY (ID),
    CONSTRAINT FK_ORDEM_SERVICO_ITEM_ESTOQUE_ORDEM_SERVICO
        FOREIGN KEY (ORDEM_SERVICO_ID)
            REFERENCES ORDEM_SERVICO(ID)
            ON DELETE CASCADE,
    CONSTRAINT CK_ORDEM_SERVICO_ITEM_ESTOQUE_QUANTIDADE_POSITIVA
        CHECK (QUANTIDADE > 0)
);

CREATE TABLE TEMPO_EXECUCAO_SERVICO (
    ID UUID PRIMARY KEY,
    SERVICO_ID UUID NOT NULL,
    TEMPO_EXECUCAO_MINUTOS INT NOT NULL DEFAULT 0,
    DATA_EXECUCAO TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,

    CONSTRAINT FK_TEMPO_EXECUCAO_SERVICO_SERVICO
        FOREIGN KEY (SERVICO_ID)
            REFERENCES SERVICO (ID)
);







